// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering with multiple props should omit multiple props 1`] = `
<Component
  b={2}
  c={3}
/>
`;

exports[`rendering without any props should do nothing 1`] = `
<Component
  a={1}
  b={2}
  c={3}
/>
`;
